<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:background="@drawable/bg_blue_gradient">
        <ImageView
            android:layout_gravity="center_vertical"
            android:src="@drawable/login_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_gray_corner"
            android:drawableLeft="@drawable/login_name_icon"
            android:drawablePadding="10dp"
            android:hint="@string/please_enter_name"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/text_gray1"
            android:textColorHint="@color/text_gray3"
            android:textSize="@dimen/text_size_14" />

        <EditText
            android:id="@+id/et_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_gray_corner"
            android:drawableLeft="@drawable/login_name_icon"
            android:drawablePadding="10dp"
            android:hint="@string/please_enter_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/text_gray1"
            android:textColorHint="@color/text_gray3"
            android:textSize="@dimen/text_size_14" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_blue_gradient_btn"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/tv_forgot_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:text="@string/fogort_password"
            android:textColor="@color/text_gray3"
            android:textSize="@dimen/text_size_12" />
    </LinearLayout>
</LinearLayout>