<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:button="@drawable/chenkbox"
            android:focusable="false"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/ll_project_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"

            android:layout_toRightOf="@id/checkbox"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="申请项目："
                android:textColor="@color/text_gray1"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:id="@+id/tv_project_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="J00001"
                android:textColor="@color/text_gray1"
                android:textSize="@dimen/text_size_16" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/right_arrow" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/ll_project_name"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/checkbox"
            android:background="@color/line_color"></View>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_car"
                android:textColor="@color/text_gray3"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:id="@+id/tv_car_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="新A12345"
                android:textColor="@color/text_gray1"
                android:textSize="@dimen/text_size_14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="车辆信息："
                android:textColor="@color/text_gray3"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:id="@+id/tv_car_vehicleName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="集装箱拖挂车"
                android:textColor="@color/text_gray1"
                android:textSize="@dimen/text_size_14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="所属车队："
                android:textColor="@color/text_gray3"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:id="@+id/tv_car_team_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="XXX车队"
                android:textColor="@color/text_gray1"
                android:textSize="@dimen/text_size_14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="历史运输："
                android:textColor="@color/text_gray3"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="102 车/次"
                android:textColor="@color/text_gray1"
                android:textSize="@dimen/text_size_14" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_bg_color"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/confirm"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/approve"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:id="@+id/tv_reject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/reject"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/reject"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/message"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/message"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/phone"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_12" />
    </LinearLayout>
</LinearLayout>